# OpenPhys

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: CONTRIBUTING.md  functions.md
docs/functions/: heat_transfer.md
src/: lib.rs
src/modules/: gravitational_force.rs  heat_transfer.rs  mod.rs  sandbox.rs
src/utils/: environment.rs  object.rs
tests/: gravitational_force_calculation_test.rs  heat_transfer_simulation_test.rs  sandbox_test.rs
